test/grammar/types/args/schema_types_err_05_kwargs/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:5:31
  |
5 | person = Person(data="Alice", n="1")
  |                               ^ expected int, got str(1)
  |